Fixing some alignment issues
The eye wasn't quite lining up with the health icon properly.
It was also getting stretched a bit by the padding.

--- a/lesscss/components/combatants.less
+++ b/lesscss/components/combatants.less
@@ -259,15 +259,15 @@
 }
 
 .combatant__commands {
-  width: 6rem;
+  width: 4rem;
   grid-area: commands;
 
   @media (max-width: @combatant-mobile-view) {
     display: flex;
+    width: 100%;
 
     .fa-eye {
-      margin: auto;
-      padding-left: 6px;
+      margin-left: 25px;
     }
   }
 }
